StationRepo and service and some media