@@ -1,5 +1,9 @@
 package com.zwash.serviceImpl;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -8,6 +12,12 @@ import com.zwash.pojos.Media;
 import com.zwash.pojos.Station;
 import com.zwash.repository.MediaRepository;
 import com.zwash.service.MediaService;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 
 @Service
 public class MediaServiceImpl implements MediaService {
@@ -23,14 +33,14 @@ public class MediaServiceImpl implements MediaService {
     public Media saveMedia(Media media,Station station ) {
     	
     	   // Upload logo file
-        if (media.getLogo() != null ) {
-            String logoFileName = saveFile(media.getLogo());
+        if (media.getLogo() != null && media.getLogo()!="") {
+            String logoFileName = saveFile(media.getLogoFile());
             station.getMedia().setLogo(logoFileName);
         }
 
      // Upload picture file
-        if (pictureFile != null && !pictureFile.isEmpty()) {
-            String pictureFileName = saveFile(pictureFile);
+        if (media.getPictureFile() != null && media.getPicture()!="") {
+            String pictureFileName = saveFile(media.getPictureFile());
             station.getMedia().setPicture(pictureFileName);
         }
         return mediaRepository.save(media);
@@ -49,7 +59,8 @@ public class MediaServiceImpl implements MediaService {
     private String saveFile(MultipartFile file) {
         try {
             String fileName = file.getOriginalFilename();
-            Path filePath = Path.of(uploadDirectory, fileName);
+            Path directoryPath = Paths.get("media");
+            Path filePath = directoryPath.resolve(fileName);
             Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
             return fileName;
         } catch (IOException e) {
